@@ -1,3 +1,8 @@
+2003-11-17 Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* planar.h: Rework eps_at, mu_at.
+	* planar.cpp: Ditto.
+
 2003-10-29 Peter Bienstman  <Peter.Bienstman@ugent.be>
 
 	* planar.cpp: Autoset N=1.
